complated swagger
