# src/controllers/users.controller.ts
@@ -1,10 +1,5 @@
-import { NextFunction, Request, Response } from "express";
-import { User } from "../types/users";
-import { BaseCustomError } from "../utils/baseCustome";
 import { userService } from "../Service/userService";
-import { StatusCode } from "../utils/statuscode";
 import { Post, Get, Route, Patch, Delete, Body, Path } from "tsoa";
-import { string } from "zod";
 
 export interface user {
   username: string;
@@ -58,42 +53,27 @@ export class UsersController {
   }
 
   //Update the use using the ID
-  // @Patch("/id")
-  // public updateUser = async (
-  //   req: Request,
-  //   res: Response,
-  //   next: NextFunction
-  // ): Promise<void> => {
-  //   try {
-  //     const { id } = req.params;
-  //     const data: User = {
-  //       username: req.body.username,
-  //       age: req.body.age,
-  //     };
-  //     const updated = await this.userService.updateUser(id, data);
-  //     res.status(StatusCode.OK).json(updated);
-  //   } catch (error: any) {
-  //     next(new Error("Internal Server Error"));
-  //   }
-  // };
+  @Patch("/:id")
+  public async updateUser(
+    @Path() id: string,
+    @Body() data: user
+  ): Promise<any> {
+    try {
+      const updated = await this.userService.updateUser(id, data);
+      return updated;
+    } catch (error: any) {
+      throw error;
+    }
+  }
 
   //Delete User by thier Id
-  // @Delete("/id")
-  // public deleteUser = async (
-  //   req: Request,
-  //   res: Response,
-  //   next: NextFunction
-  // ): Promise<void> => {
-  //   try {
-  //     const { id } = req.params;
-  //     const deleteUser = await this.userService.DeleteUser(id);
-  //     res.status(StatusCode.NoContent).json({
-  //       message: "Delete successful!",
-  //       error: false,
-  //       data: deleteUser,
-  //     });
-  //   } catch (error: any) {
-  //     next(new Error("Internal Server Error"));
-  //   }
-  // };
+  @Delete("/:id")
+  public async deleteUser(@Path() id: string): Promise<any> {
+    try {
+      const deleteUser = await this.userService.DeleteUser(id);
+      return deleteUser;
+    } catch (error: any) {
+      throw error;
+    }
+  }
 }
